--- a/src/shims/manual/Directory.Build.props
+++ b/src/shims/manual/Directory.Build.props
@@ -7,6 +7,7 @@
     <BuildConfigurations>
       $(PackageConfigurations);
       netcoreapp;
+      netcoreappaot;
       uap;
     </BuildConfigurations>
     <IsNETCoreApp>true</IsNETCoreApp>
