Add EventSource tracing to WinHttpHandler (#29604)
Add EventSource tracing to WinHttpHandler

Removed the custom OutputDebugString-style tracing from WinHttpHandler and replaced it with
NetEventSource. Didn't define any new event id's but tried to use "Info" vs. "Error"
in more places.

Due to the unique way the WinHttpHandler class gets built into two different binaries,
I needed to add a new EventSource name/GUID for the standalone System.Net.Http.WinHttpHandler.dll
binary. The logging output is similar but will show up in either "Microsoft-System-Net-Http" or
"Microsoft-System-Net-Http-WinHttpHandler" EventSource's depending on which binary is being used,
i.e. whether "new HttpClientHandler()" or "new WinHttpHandler()" was used.

For those curious about how the new GUID for "Microsoft-System-Net-Http-WinHttpHandler" was done, it
was not generated randomly. EventSource GUID's are generated based on the string name for the
EventSource according to a well-defined formula. Doing a construct like this will return back the
information:

```c#
Type esType = typeof(WinHttpHandler).GetTypeInfo().Assembly.GetType("System.Net.NetEventSource", true, false);
Console.WriteLine($"Name={EventSource.GetName(esType)}, Guid={EventSource.GetGuid(esType).ToString()}");
```

Closes #7856

--- a/src/System.Net.Http.WinHttpHandler/src/System.Net.Http.WinHttpHandler.csproj
+++ b/src/System.Net.Http.WinHttpHandler/src/System.Net.Http.WinHttpHandler.csproj
@@ -30,6 +30,7 @@
          up item called CompileItem and then just include it here. -->
   <ItemGroup Condition=" '$(TargetsWindows)' == 'true' ">
     <Compile Include="@(CompileItem)" />
+    <Compile Include="System\Net\Http\NetEventSource.WinHttpHandler.cs" />
     <Compile Include="$(CommonPath)\CoreLib\System\IO\StreamHelpers.CopyValidation.cs">
       <Link>Common\CoreLib\System\IO\StreamHelpers.CopyValidation.cs</Link>
     </Compile>
