--- a/src/shims/Directory.Build.props
+++ b/src/shims/Directory.Build.props
@@ -5,6 +5,7 @@
     <BuildConfigurations>
       $(BuildConfigurations);
       netcoreapp;
+      netcoreappaot;
       uap;
     </BuildConfigurations>
   </PropertyGroup>
