Add/Remove for CMS UnsignedAttributes and Certificates (#29408)
* Initial implementation for Add/RemoveUnsignedAttribute

* initial implementation for Add/RemoveCertificate

* Add/RemoveUnsignedAttribute tests

* add tests for Add/RemoveCert

* apply feedback

* apply missed feedback

* make ReReadSugnedCms take reference

* Fix test to compare bytes of Rfc3161TimestampTokenInfo.SerialNumber

* change AddUnsignedAttribute to more compact and fix RemoveCounterSignature

* apply review feedback

* add test for RemoveCounterSignature

* regenerate repro document with correct settings for DSA counter-signature

* disable test on netfx

* apply feedback

--- a/src/System.Security.Cryptography.Pkcs/tests/System.Security.Cryptography.Pkcs.Tests.csproj
+++ b/src/System.Security.Cryptography.Pkcs/tests/System.Security.Cryptography.Pkcs.Tests.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Rfc3161\TimestampTokenTestData.cs" />
     <Compile Include="Rfc3161\TimestampTokenTests.cs" />
     <Compile Include="SignedCms\SignedCmsTests.netcoreapp.cs" />
+    <Compile Include="SignedCms\SignerInfoTests.netcoreapp.cs" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetsWindows)' == 'true' AND '$(TargetGroup)'=='netcoreapp'">
     <Compile Include="EnvelopedCms\DecryptTests.KeyPersistence.cs" />
